--- a/src/app/component/login/login.component.css
+++ b/src/app/component/login/login.component.css
@@ -1,4 +1,9 @@
 /* @extend display-flex; */
+
+.navBarBtnlang{
+    margin-top: 5%;
+}
+
 display-flex, .display-flex, .display-flex-center {
     display: flex;
     display: -webkit-flex; }
@@ -145,7 +150,7 @@ display-flex, .display-flex, .display-flex-center {
     -o-background-size: cover;
     -ms-background-size: cover;
     background-position: center center;
-    padding: 115px 0; }
+}
   
   .container {
     width: 660px;
@@ -333,7 +338,7 @@ display-flex, .display-flex, .display-flex-center {
     color: #555;
     font-weight: 500;
     text-align: center;
-    margin-top: 91px;
+    margin-top: 15px;
     margin-bottom: 5px; }
   
   .loginhere-link {
