create translation of signup and login

--- a/src/app/component/cPanel/side-bar/side-bar.component.html
+++ b/src/app/component/cPanel/side-bar/side-bar.component.html
@@ -86,7 +86,7 @@
         </div>
 
         <li class="nav-item">
-            <a class="nav-link" [routerLink]="[{ outlets: { sidebar: 'maintenance' } }]">
+            <a class="nav-link" [routerLink]="['',{ outlets: { sidebar: ['maintenance','maintenance'] } }]">
                 <i class="fas fa-fw fa-chart-area"></i>
                 <span>Maintenance Request</span></a>
         </li>
