change the logo and color of sidebar

--- a/src/app/component/cPanel/side-bar/side-bar.component.html
+++ b/src/app/component/cPanel/side-bar/side-bar.component.html
@@ -8,7 +8,7 @@
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center">
             <div class="sidebar-brand-icon ">
-                <img src="assets/img/Ejarat_Logo.png" alt="logo" class="Logo_style2">
+                <img src="assets/img/eLogo.png" alt="logo" class="Logo_style2">
             </div>
         </a>
 
@@ -138,7 +138,7 @@
                 <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
                     aria-label="Search" aria-describedby="basic-addon2">
                 <div class="input-group-append">
-                    <button class="btn btn-primary" type="button" style="background-color: #00FFAD; border-color: black;">
+                    <button class="btn btn-primary" type="button" style="background-color: #192440; border-color: black;">
                         <i class="fas fa-search fa-sm"></i>
                     </button>
                 </div>
