--- a/src/app/component/cPanel/side-bar/side-bar.component.css
+++ b/src/app/component/cPanel/side-bar/side-bar.component.css
@@ -11100,7 +11100,7 @@ a:focus {
 
 .bg-gradient-primary {
     background-color: #4e73df;
-    background-image: linear-gradient(180deg, #00FFAD 10%, #192440 100%);
+    background-image: linear-gradient(180deg, #192440 10%, #192440 100%);
     background-size: cover
 }
 
