--- a/src/app/main-ejarat/main-ejarat.component.html
+++ b/src/app/main-ejarat/main-ejarat.component.html
@@ -5,7 +5,7 @@
         
         <div class="row flex-row mb-3" style="margin: 0px;">
             <div class="col-9">
-                <img src="assets/img/Ejarat_Logo.png" alt="logo" class="Logo_style">
+                <img src="assets/img/eLogo.png" alt="logo" class="Logo_style">
             </div>
             <div class="col " >
                 <li routerLink="/login" id="navBar_btn" class=" btn   navBarBtntop" data-i18n="login">{{getTranslation('LOGIN')}}</li>
